--- a/gb/news2008_5.md
+++ b/gb/news2008_5.md
@@ -1,4 +1,10 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/fcjmkl2375/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fcjmkl2375/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/29/n11753449.md#1" target="_blank">加州居民移居拉斯维加斯蔚成趋势</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/29/n11753449.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Nevada-2-150x120.png" align ="left"></a>文：刘大年?拉斯维加斯房地产经纪
+美国人口普查局最新估计，从2017年8月到2018年7月，超过5万名加州居民移居内华达州，这数值是10年来第二峰值。
+
+加州在内华达州的人口增长扮演着重要角色。据估计，在过去的12个月中，10个移居至内华达州的人中就有4个来自加州。
+
+2017与2018两年间，总共约有128.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 1:34 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/28/n11751840.md#1" target="_blank">40年守护无数早产儿 医师许琼心：愿为小病人燃烧一生</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/28/n11751840.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/xuqiongxin-1230-150x120.jpg" align ="left"></a>在马偕儿童医院的新生儿病房和早产儿加护病房之间，有一条长长的甬道，许琼心在这里疾步穿行了四十年。她就这样走入一个个“巴掌仙子”的人生。70岁的许琼心，在台湾儿科被男医师独占的年代，是马偕儿科的第一位女住院医师，也见证了台湾第一个新生儿加护病房的成立。她人生大半的岁月都在救援早产儿中度过。无数个瑟缩在保温箱里、......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 12:29 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/29/n11753337.md#1" target="_blank">美国房市正临3项变化 婴儿潮一代影响重大</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/29/n11753337.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_1392429743-150x120.jpg" align ="left"></a>提供：Juliana Lee Team?湾区房地产经纪
 十一月在旧金山举行的Proptech CEO峰会上，关于住宅房地产的变化和创新的各个方面都没有被忽视。
@@ -31,7 +37,6 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/26/n11746044.md#1" target="_blank">高750公尺 世界最大圣诞树在意大利</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/26/n11746044.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-72796439-150x120.jpg" align ="left"></a>在意大利中部城镇古比奥（Gubbio）的山坡上，由巨型灯饰组成的世界最大圣诞树，每年都会在圣诞节之前点亮，今年也不例外。在过去几十年来，这已经成为当地的传统以及吸引游客造访的亮点之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 12:59 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/25/n11744475.md#1" target="_blank">“天然抗生素”猪母乳 用蒜头炒就很好吃</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/25/n11744475.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191225_shouhui_vegetable_01-150x120.jpg" align ="left"></a>王宝钏苦守寒窑十八年，靠采桑及吃猪母乳、鸟苋仔、乌甜仔等野菜过活，日夜盼望从军的薛平贵功成名就回家团圆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 11:23 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/25/n11745027.md#1" target="_blank">【美食天堂】酸甜糖醋鱼～外酥内嫩好入口</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/25/n11745027.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Sweet-and-Sour-Fish1-150x120.jpeg" align ="left"></a>为什么围炉桌上少不了一条鱼？不论那一种料理方式（清蒸、香煎、糖醋），在年夜饭不将鱼肉吃完，表示新的一年财富够用有“剩”下，年年有“余”！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 9:27 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/24/n11742993.md#1" target="_blank">93岁老奶奶玩角色扮演Cosplay大红 粉丝百万</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/24/n11742993.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/825f5afa8260590218371708b38b9a49-150x120.jpg" align ="left"></a>角色扮演（Cosplay）向来都是年轻人在玩，没想到一位美国93岁的老奶奶和27岁的孙子联手，大玩各种有趣的角色扮演，再把它们放在网路上后，让老奶奶成为世界知名网红，各网站加起来有100万以上的粉丝群呢！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:49 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/27/n11748297.md#1" target="_blank">搭机旅行 视频教你机场生存五妙招</a><br></h3>随着安检严格，以及越来越多人旅游，乘客一般会选择尽早感到机场，有时候在机场花的时间很长。在闹哄哄的机场等候，很容易产生不耐烦和焦虑情绪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 7:34 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/28/n11751661.md#1" target="_blank">酒后汽车不让开</a><br></h3>仅在美国，每天就有30人在与酒后驾驶相关的交通事故中丧生。这相当于每48分钟就有一个人死于酒驾相关的事故。但问题是，现实中其实已经存在简单的技术可以防止，甚至可能杜绝酒后驾驶的。那么为什么汽车制造商不在新车上配置这种技术呢？
 
